--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -7,6 +7,8 @@
 <body>
 Hello!
 
-<a href="/goodbye"> Say goodbye</a> or <a href="/exit">Exit</a>
+<a href="/first/goodbye"> Say goodbye</a>
+or <a href="/second/exit">Exit</a>
+or <a href="/first/hello?name=Bakyt&lastname=Kudaibergenov">Request with parameters</a>
 </body>
 </html>
