--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -11,5 +11,10 @@
        th:text="${person.getName()}">user</a>
 </div>
 
+<br/>
+<hr/>
+
+<a href="/people/new">Create new person</a>
+
 </body>
 </html>
