--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>List of people</title>
+    <title>People</title>
 </head>
 <body>
 
 <div th:each="person : ${people}">
     <a th:href="@{/people/{id}(id=${person.getId()})}"
-       th:text="${person.getName()}">user</a>
+       th:text="${person.getName() + ', ' + person.getAge()}">user</a>
 </div>
 
 <br/>
