--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -15,7 +15,7 @@
     <input type="text" th:field="*{dateOfBirth}" id="dateOfBirth"/>
     <div style="color:red" th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}">Date of birth Error</div>
     <br/>
-    <input type="submit" value="Create!"/>
+    <input type="submit" value="Создать!"/>
 </form>
 
 </body>
