--- a/src/main/webapp/WEB-INF/views/books/edit.html
+++ b/src/main/webapp/WEB-INF/views/books/edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Update book</title>
+  <title>Изменение книги</title>
 </head>
 <body>
 
